# moctale-streamio-addon

./: .env.example  .gitignore  README.md  main.py  moctale_items.csv  moctale_items.json  pyproject.toml  scrape_moctale.py  tempCodeRunnerFile.py
fastapi-addon/: .env.example  .gitignore  README.md  app.py  beamup.json  catalog.py  config.py  manifest.py  moctale.py  tmdb.py
stremio-addon/: .env.example  package-lock.json  package.json  tmdb_cache.json
stremio-addon/src/: catalog.js  index.js  manifest.js  tmdb.js
