[project]
name = "moctale-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "python-dotenv>=1.0",
  "playwright>=1.44",   # optional – only needed for --playwright flag
]
